主管端新增統一式導覽列顯示

--- a/admin/record.html
+++ b/admin/record.html
@@ -9,27 +9,9 @@
     <link rel="stylesheet" href="../css/adminPersonnel.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../img/logo.png" alt="Logo"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item"><a class="nav-link active" href="./review.html">假單審核</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="./information.html">員工請假資訊</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="./maintain.html">新增員工</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="./personnel.html">在職員工</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="./log.html">過審紀錄</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="./calendar.html">行事曆</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="./record.html">打卡紀錄</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+
+    <div id="navbar-container"></div>
+    
     <main>
         <div class="container my-4">
             <h1>在職員工</h1>
