--- a/admin/review.html
+++ b/admin/review.html
@@ -10,27 +10,7 @@
 </head>
 <body>
     <!-- 頁首 -->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="../img/logo.png" alt="祐肯請假系統"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item"><a class="nav-link active" href="./review.html">假單審核</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="./information.html">員工請假資訊</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="./maintain.html">新增員工</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="./personnel.html">在職員工</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="./log.html">過審紀錄</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="./calendar.html">行事曆</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="./record.html">打卡紀錄</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <div id="navbar-container"></div>
 
     <!-- 假單審核區 -->
     <section class="my-4">
