主管端新增統一式導覽列顯示 [打卡紀錄] [假單修改] 補上

--- a/admin/record.html
+++ b/admin/record.html
@@ -38,6 +38,6 @@
     <script src="../js/jquery-3.7.1.min.js"></script>
     <script src="../js/cookieOperation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/"></script>
+    <script src="../js/adminRecord.js"></script>
 </body>
 </html>
