--- a/employee/employeeMain.html
+++ b/employee/employeeMain.html
@@ -12,36 +12,8 @@
 		<link rel="stylesheet" href="../css/employeeMain.css">
 	</head>
     <body>
-		<header>
-				<nav class="navbar navbar-expand-lg navbar-light bg-light">
-					<div class="container-fluid">
-						<a class="navbar-brand" href="./employeeMain.html"><img src="../img/logo.png"></a>
-						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-							<span class="navbar-toggler-icon">
-								
-							</span>
-						</button>
-						<div class="collapse navbar-collapse" id="navbarSupportedContent">
-							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./checkIn.html">打卡</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./leave.html">請假</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./documental.html">請假紀錄</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./calendar.html">行事曆</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</nav>
-		</header>
 		
-		
+		<div id="navbar-container"></div>
 
 		<section>
 			<div class="text-center">
@@ -55,5 +27,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
-    </body>
+		<script src="../js/employeeMain.js"></script>
+	</body>
 </html>
