--- a/employee/information.html
+++ b/employee/information.html
@@ -12,37 +12,9 @@
 		<link rel="stylesheet" href="../css/employeeInformation.css">
 	</head>
     <body>
-		<header>
-				<nav class="navbar navbar-expand-lg navbar-light bg-light">
-					<div class="container-fluid">
-						<a class="navbar-brand" href="./employeeMain.html"><img src="../img/logo.png"></a>
-						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-							<span class="navbar-toggler-icon">
-								
-							</span>
-						</button>
-						<div class="collapse navbar-collapse" id="navbarSupportedContent">
-							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./checkIn.html">打卡</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./leave.html">請假</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./documental.html">請假紀錄</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./calendar.html">行事曆</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</nav>
-		</header>
 		
+		<div id="navbar-container"></div>
 		
-
 		<section>
 			<div class="container">
                 <div class="col">
