--- a/admin/log.html
+++ b/admin/log.html
@@ -45,6 +45,11 @@
                                     
                                 </tbody>
                             </table>
+                            <nav class="d-flex justify-content-between align-items-center my-3">
+                                <button id="prevPage" class="btn btn-primary">上一頁</button>
+                                <span id="pageInfo"></span>
+                                <button id="nextPage" class="btn btn-primary">下一頁</button>
+                            </nav>
                         </div>
                     </div>
                 </div>
