--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 				</div>
 			</div>
 		</div>
+		<div class="version-info">
+			版本：Alpha 6.11.1
+			製作者：章凱昱、吳岱威
+		</div>
 		<script src="js/jquery-3.7.1.min.js"></script>
         <script src="js/cookieOperation.js"></script>
 		<script src="js/index.js"></script>
