--- a/employee/checkIn.html
+++ b/employee/checkIn.html
@@ -54,6 +54,20 @@
             </div>
 		</section>
 
+		<section>
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<p>* 依《勞動基準法》第30條第5款規定：「雇主應置備勞工出勤紀錄，並保存五年。」</p>
+						<p>*  請等上班時間到再打卡</p>
+						<p>*  請於18:00前打卡下班</p>
+						<p>*  加班須先申請，經主管核准</p>
+					</div>
+				</div>
+
+			</div>
+		</section>
+
 		<script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
