--- a/admin/navbar.html
+++ b/admin/navbar.html
@@ -22,6 +22,9 @@
                     <li class="nav-item"><a class="nav-link" href="./calendar.html">行事曆</a></li>
                     <li class="nav-item"><a class="nav-link" href="./record.html">打卡紀錄</a></li>
                 </ul>
+                <form class="d-flex">
+                    <p id="name">0</p>
+                </form>
             </div>
         </div>
     </nav>
