--- a/employee/navbar.html
+++ b/employee/navbar.html
@@ -20,7 +20,9 @@
                     <li class="nav-item"><a class="nav-link" href="./documental.html">請假紀錄</a></li>
                     <li class="nav-item"><a class="nav-link" href="./calendar.html">行事曆</a></li>
                 </ul>
-
+                <form class="d-flex">
+                    <p id="name">0</p>
+                </form>
             </div>
         </div>
     </nav>
