員工端和主管端新增資料更新的功能，版本號修正，新增一個新功能

--- a/admin/information.html
+++ b/admin/information.html
@@ -24,6 +24,7 @@
                             <input placeholder="員工編號" id="code" class="search">
                             <input placeholder="查詢年度" id="date" class="search">
                             <button id="searching" class="search">搜尋</button>
+                            <button id="upData" class="search">更新資料</button>
                         </div>
 
                         <div>
