--- a/admin/record.html
+++ b/admin/record.html
@@ -12,27 +12,24 @@
 
     <div id="navbar-container"></div>
     
-    <main>
-        <div class="container my-4">
-            <h1>在職員工</h1>
-            <div class="table-responsive">
-                <table class="table table-bordered table-striped table-hover">
-                    <thead class="table-dark">
-                        <tr>
-                            <th>員工編號</th>
-                            <th>員工姓名</th>
-                            <th>上班時間</th>
-                            <th>下班時間</th>
-                        </tr>
-                    </thead>
-                    <tbody id="table"></tbody>
-                </table>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>打卡紀錄</h1>
+                </div>
             </div>
-            <nav class="d-flex justify-content-between align-items-center my-3">
-                <button id="prevPage" class="btn btn-primary">上一頁</button>
-                <span id="pageInfo"></span>
-                <button id="nextPage" class="btn btn-primary">下一頁</button>
-            </nav>
+        </div>
+    </section>
+
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div id="calendar">
+                        <iframe src="https://drive.google.com/embeddedfolderview?id=1_4mNF0GZOGRhZ30ZHcm6zcVxT3oJ1R6E#list" width="100%" height="600" style="border:0;"></iframe>
+                </div>
+            </div>
         </div>
     </main>
     <script src="../js/jquery-3.7.1.min.js"></script>
