主管端，行事曆打卡紀錄半成品

--- a/admin/record.html
+++ b/admin/record.html
@@ -16,6 +16,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
+                    <button id="upData">更新行事曆資料</button>
                     <h1>打卡紀錄</h1>
                 </div>
             </div>
