--- a/employee/navbar.html
+++ b/employee/navbar.html
@@ -21,7 +21,8 @@
                     <li class="nav-item"><a class="nav-link" href="./calendar.html">行事曆</a></li>
                 </ul>
                 <form class="d-flex">
-                    <p id="name">0</p>
+                    <p class="nav-item" id="name">0</p>
+                    
                 </form>
             </div>
         </div>
