--- a/employee/calendar.html
+++ b/employee/calendar.html
@@ -30,7 +30,11 @@
 				<div class="row">
 					<div class="col">
 						<div id="calendar">
-							<iframe src="https://drive.google.com/embeddedfolderview?id=1YkJ9qs0lIDk5BfGMr_xV5bA7YmFn7S_p#list" width="100%" height="600" style="border:0;"></iframe>
+							<iframe src="https://docs.google.com/spreadsheets/d/11_Zhaax_tsKy9Kp8dFtLOQjAdGkwB7UR/preview"
+        						width="100%" 
+        						height="600px" 
+        						frameborder="0">
+							</iframe>
 						</div>
 					</div>
 				</div>
