--- a/employee/checkIn.html
+++ b/employee/checkIn.html
@@ -61,6 +61,7 @@
 						<p>* 依《勞動基準法》第30條第5款規定：「雇主應置備勞工出勤紀錄，並保存五年。」</p>
 						<p>*  請等上班時間到再打卡</p>
 						<p>*  請於18:00前打卡下班</p>
+						<p>*  員工上下班時間需依規定記錄出勤，如果忘記打卡, 沒有紀錄上下班時間，就由雇主代為記錄</p>
 						<p>*  加班須先申請，經主管核准</p>
 					</div>
 				</div>
