--- a/employee/calendar.html
+++ b/employee/calendar.html
@@ -29,10 +29,24 @@
 			<div class="container">
 				<div class="row">
 					<div class="col">
+						<select id="month">
+							<option>1月</option>
+							<option>2月</option>
+							<option>3月</option>
+							<option>4月</option>
+							<option>5月</option>
+							<option>6月</option>
+							<option>7月</option>
+							<option>8月</option>
+							<option>9月</option>
+							<option>10月</option>
+							<option>11月</option>
+							<option>12月</option>
+						</select>
 						<div id="calendar">
 							<iframe src="https://docs.google.com/spreadsheets/d/1xrzMI2jtxNfv5X4ZuoYzT0D_bX6ZQY1l/preview"
-        						width="100%" 
-        						height="600px" 
+        						width="100%"
+        						height="600px"
         						frameborder="0">
 							</iframe>
 						</div>
