主管端與員工端，詳細資料顯示到職日

--- a/admin/information.html
+++ b/admin/information.html
@@ -21,6 +21,7 @@
                     <div class="col">
                         <div id="search" >
                             <h1>員工請假資訊</h1>
+                            <div id="joinTime"></div>
                             <input placeholder="員工編號" id="code" class="search">
                             <input placeholder="查詢年度" id="date" class="search">
                             <button id="searching" class="search">搜尋</button>
