--- a/employee/information.html
+++ b/employee/information.html
@@ -19,6 +19,7 @@
 			<div class="container">
                 <div class="col">
                     <h1>詳細資料</h1>
+					<div id="joinTime"></div>
                 </div>
             </div>
 		</section>
