add new dayoff [official]

--- a/employee/information.html
+++ b/employee/information.html
@@ -73,6 +73,9 @@
 								<tr id="maternity">
 									<th>已請產假</th>
 								</tr>
+								<tr id="official">
+									<th>已請公假</th>
+								</tr>
 							</tbody>
 						</table>
 					</div>
