--- a/employee/leave.html
+++ b/employee/leave.html
@@ -40,6 +40,7 @@
 									<option>流產假</option>
 									<option>陪產假</option>
 									<option>產假</option>
+									<option>公假</option>
 								</select>
 							</div>
 
