--- a/admin/information.html
+++ b/admin/information.html
@@ -73,6 +73,9 @@
                                     <tr id="official">
                                         <th>已請公假</th>
                                     </tr>
+                                    <tr id="typhoon">
+                                        <th>已請颱風假</th>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
