--- a/employee/leave.html
+++ b/employee/leave.html
@@ -41,6 +41,7 @@
 									<option>陪產假</option>
 									<option>產假</option>
 									<option>公假</option>
+									<option>颱風假</option>
 								</select>
 							</div>
 
