[fix] 普通傷病假 -> 病假

--- a/employee/information.html
+++ b/employee/information.html
@@ -47,7 +47,7 @@
 									<th>已請事假</th>
 								</tr>
 								<tr id="sick">
-									<th>已請普通傷病假</th>
+									<th>已請病假</th>
 								</tr>
 								<tr id="wedding">
 									<th>已請婚假</th>
