--- a/employee/leave.html
+++ b/employee/leave.html
@@ -31,7 +31,7 @@
 									<option>選擇假別</option>
 									<option>特休假</option>
 									<option>事假</option>
-									<option>普通傷病假</option>
+									<option>病假</option>
 									<option>婚假</option>
 									<option>喪假</option>
 									<option>家庭照顧假</option>
