--- a/admin/information.html
+++ b/admin/information.html
@@ -74,7 +74,7 @@
                                         <th>已請公假</th>
                                     </tr>
                                     <tr id="typhoon">
-                                        <th>已請颱風假</th>
+                                        <th>停班停課</th>
                                     </tr>
                                 </tbody>
                             </table>
