--- a/employee/information.html
+++ b/employee/information.html
@@ -29,6 +29,7 @@
 				<div class="col">
 					<div id="search" >
 						<input placeholder="查詢年度(西元年)" id="date" class="search">
+						<input placeholder="查詢月份" id="month" class="search">
 						<button id="searching" class="search">搜尋</button>
 					</div>
 					<div>
