--- a/admin/information.html
+++ b/admin/information.html
@@ -10,6 +10,8 @@
 		
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 		<link rel="stylesheet" href="../css/adminInformation.css">
+		<!-- jQuery Confirm CSS -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.4/jquery-confirm.min.css">
 	</head>
     <body>
 
@@ -24,9 +26,9 @@
                             <div id="joinTime"></div>
                             <input placeholder="員工編號" id="code" class="search">
                             <input placeholder="查詢年度" id="date" class="search">
-                            <input placeholder="查詢月份" id="month" class="search">
                             <button id="searching" class="search">搜尋</button>
                             <button id="upData" class="search">更新資料</button>
+                            <div id="choose" class="search"></div>
                         </div>
 
                         <div>
@@ -86,10 +88,13 @@
 		</section>
 
 		<script src="../js/jquery-3.7.1.min.js"></script>
-        <script src="../js/cookieOperation.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.4/jquery-confirm.min.js"></script>
+		<script src="../js/cookieOperation.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
         <script src="../js/adminInformation.js"></script>
+		<!-- jQuery Confirm JS -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.4/jquery-confirm.min.js"></script>
     </body>
 </html>
