--- a/admin/calendar.html
+++ b/admin/calendar.html
@@ -10,6 +10,7 @@
 		
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 		<link rel="stylesheet" href="../css/calendar.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.4/jquery-confirm.min.css">
 	</head>
     <body>
 		
@@ -30,8 +31,7 @@
 				<div class="row">
 					<div class="col">
 						<div id="calendar">
-							<button id="upDataMonth">更新當月行事曆資料</button>
-							<button id="upDataYear">更新當年行事曆資料</button>
+							<button id="upData" class="btn btn-primary">更新行事曆</button>
 							<iframe src="https://drive.google.com/embeddedfolderview?id=1YkJ9qs0lIDk5BfGMr_xV5bA7YmFn7S_p#list" width="100%" height="600" style="border:0;"></iframe>
 						</div>
 					</div>
@@ -45,5 +45,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
 		<script src="../js/adminCalendar.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.4/jquery-confirm.min.js"></script>
 	</body>
 </html>
